# img_utilites

./: .gitignore  DOCS.md  README.md  imgconv.py  pyproject.toml  requirements.txt
imgconv/: __init__.py  __main__.py  cli.py  color.py  crop.py  formats.py  pipeline.py  presets.py  transforms.py
